<resources>
    <string name="app_name">신바람 빌리지</string>

    <!-- Sign In -->
    <string name="email">핸드폰 번호를 입력해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="signin_email">로그인</string>
    <string name="signin_google">Google 계정으로 로그인</string>
    <string name="signin_naver">네이버로 로그인</string>
    <string name="signup_complete">회원 가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요.</string>

    <!-- Bottom Navigation View -->
    <string name="home">소식</string>
    <string name="search">검색</string>
    <string name="gallery">글 작성</string>
    <string name="favorite">채팅</string>
    <string name="account">사용자</string>
    <string name="mall">신바람몰</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">나의 구독</string>
    <string name="follower">내 구독자</string>
    <string name="follow">구독</string>
    <string name="myfollowing">구독</string>
    <string name="myfollower">구독자</string>
    <string name="follow_cancel">구독 취소</string>
    <string name="profile">정보</string>
    <string name="count_0">0</string>

    <!-- User Fragment -->
    <string name="postCount">내 글 갯수</string>


    <!-- Alarm -->
    <string name="alarm_favorite">님이 당신의 글을 좋아합니다.</string>
    <string name="alarm_comment">님이 댓글을 달았습니다.</string>
    <string name="alarm_follow">님이 팔로우 하셨습니다.</string>
    <string name="alarm_chat">님이 메세지를 보내셨습니다.</string>
    <string name="alarm_follower_update">님이 새로운 소식을 올리셨습니다.</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">글 작성</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>