<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_alignParentLeft="true"
            android:id="@+id/fragment_user_circle_imageview"
            android:src="@drawable/common_google_signin_btn_icon_dark"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />

        <Button
            android:id="@+id/account_btn_follow_signout"
            android:text="@string/follow"
            android:layout_toRightOf="@id/fragment_user_circle_imageview"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <LinearLayout
            android:gravity="center"
            android:layout_toRightOf="@+id/fragment_user_circle_imageview"
            android:layout_above="@+id/account_btn_follow_signout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/account_tv_post_count"
                    android:text="@string/count_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/account_tv_follower_count"
                    android:text="@string/count_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:text="@string/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/account_tv_following_count"
                    android:text="@string/count_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>



    </RelativeLayout>
    


</androidx.constraintlayout.widget.ConstraintLayout>