<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <data>

        <variable
            name="activitylogin"
            type="com.uos.project_new_windy.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/activity_login_imageview_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/login_logo"
            android:scaleType="centerInside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        


        <LinearLayout
            android:id="@+id/signin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_imageview_logo">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_round_white_stoke_black_24dp">

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@android:color/transparent"
                    android:inputType="phone"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_round_gray_stroke_black_4dp">

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            -->

            <Button
                android:id="@+id/email_login_button"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_round_dark_green_24dp"
                android:text="@string/signin_email"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:theme="@style/ButtonStyle" />

        </LinearLayout>

        <TextView

            app:layout_constraintTop_toBottomOf="@+id/signin_layout"
            app:layout_constraintLeft_toLeftOf="@+id/signin_layout"
            app:layout_constraintRight_toRightOf="@+id/signin_layout"
            android:layout_marginTop="8dp"
            android:id="@+id/activity_find_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="비밀번호 찾기"

            />






        <Button
            android:id="@+id/activity_login_button_none_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_round_yellow_24dp"
            android:text="지금 바로 구경하기"
            />

        <Button
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/drawable_google_login_logo_custom"
            android:paddingRight="32dp"
            android:paddingLeft="12dp"
            android:background="@drawable/background_round_3dp_white_stroke_gray_24dp"
            android:text="@string/signin_google"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@+id/activity_find_password" />

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/activity_login_button_none_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            >

            <TextView
                android:id="@+id/activity_login_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginRight="12dp"
                android:text="회원이 아니인가요? 회원 가입"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColor="@color/colorBlack"/>
            





            <TextView
                android:id="@+id/activity_login_policy"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_login_sign_up"
                app:layout_constraintLeft_toLeftOf="@+id/activity_login_sign_up"
                app:layout_constraintRight_toRightOf="@+id/activity_login_sign_up"
                android:gravity="center"
                android:layout_marginLeft="12dp"
                android:text="이용 약관" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>